[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slug"
version = "0.1.0"
description = "This is just a cookie test"
readme = "README.rst"
authors = [
  {name = "Wen-Hua Wu", email = "colonist288@gmail.com"}
]
maintainers = [
  {name = "Wen-Hua Wu", email = "colonist288@gmail.com"}
]
classifiers = [

]
license = {text = "GNU General Public License v3"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/CrazyAncestor/slug/issues"
changelog = "https://github.com/CrazyAncestor/slug/blob/master/changelog.md"
homepage = "https://github.com/CrazyAncestor/slug"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

